@@ -7,10 +7,15 @@ import java.util.*;
 import java.util.regex.Pattern;
 
 public final class PythonStyleYamlRuleLoader {
+
     @SuppressWarnings("unchecked")
     public List<CorrectionRule> load(InputStream inputStream) {
         Yaml yaml = new Yaml();
         Map<String, Object> data = yaml.load(inputStream);
+        if (data == null) {
+            return List.of();
+        }
+
         List<Map<String, Object>> rawRules = (List<Map<String, Object>>) data.getOrDefault("rules", List.of());
         List<CorrectionRule> out = new ArrayList<>();
 
@@ -20,65 +25,151 @@ public final class PythonStyleYamlRuleLoader {
             Map<String, Object> merge = RuleYamlSupport.map(rawRule.get("merge"));
             MatchSpec spec = MatchParser.parse(rawRule, rewrite);
 
-            Map<String, Object> delete = RuleYamlSupport.map(rewrite.get("delete"));
-            if (!delete.isEmpty()) {
-                String type = RuleYamlSupport.string(delete.get("type"), "");
-                List<String> chars = RuleYamlSupport.stringList(delete.get("chars"));
-                if ("chars".equals(type)) out.add(new DeleteCharsRule(id + ":delete_chars", chars));
-                else if ("part".equals(type)) out.add(new DeletePartsRule(id + ":delete_parts", chars));
-            }
-
-            Map<String, Object> gloss = RuleYamlSupport.map(rewrite.get("gloss"));
-            List<String> before = RuleYamlSupport.stringList(rewrite.get("before"));
-            List<String> after = RuleYamlSupport.stringList(rewrite.get("after"));
-            Map<String, String> surfaceMap = buildMapping(before, after);
-            Map<String, String> glossMap = gloss.containsKey("before") && gloss.containsKey("after")
-                    ? buildMapping(RuleYamlSupport.stringList(gloss.get("before")), RuleYamlSupport.stringList(gloss.get("after")))
-                    : Map.of();
-            if (!surfaceMap.isEmpty() || !glossMap.isEmpty()) {
-                out.add(new SurfaceRewriteRule(id + ":surface_rewrite", spec, surfaceMap, glossMap));
-            }
-
-            if (rewrite.containsKey("insert")) {
-                Map<String, Object> ins = RuleYamlSupport.map(rewrite.get("insert"));
-                out.add(new InsertSegmentRule(id + ":insert", spec, RuleYamlSupport.string(ins.get("segment"), ""), RuleYamlSupport.intValue(ins.get("token"), 1), RuleYamlSupport.intValue(ins.get("position"), 1)));
-            }
-
-            if (!merge.isEmpty()) {
-                Map<String, Object> match = RuleYamlSupport.map(merge.get("match"));
-                Object tokens = match.get("tokens");
-                List<List<String>> seqs = new ArrayList<>();
-                if (tokens instanceof List<?> l && !l.isEmpty() && l.get(0) instanceof List<?>) {
-                    for (Object o : l) seqs.add(RuleYamlSupport.stringList(o));
-                } else if (tokens != null) {
-                    seqs.add(RuleYamlSupport.stringList(tokens));
-                }
-                if (!seqs.isEmpty()) out.add(new MergeSequenceRule(id + ":merge", seqs));
-            }
-
-            Map<String, Object> regexSub = RuleYamlSupport.map(rewrite.get("regex_sub"));
-            if (!regexSub.isEmpty()) {
-                boolean ignoreCase = RuleYamlSupport.bool(regexSub.get("ignore_case"), false);
-                int flags = ignoreCase ? Pattern.CASE_INSENSITIVE | Pattern.UNICODE_CASE : 0;
-                Pattern pattern = Pattern.compile(RuleYamlSupport.string(regexSub.get("pattern"), ""), flags);
-                out.add(new RegexSubRule(id + ":regex_sub", new RuleSelector(false, null, Set.of(), List.of(), false), RuleYamlSupport.string(regexSub.get("scope"), "chuj"), pattern, RuleYamlSupport.string(regexSub.get("repl"), "")));
-            }
-
-            Map<String, Object> split = RuleYamlSupport.map(rewrite.get("split"));
-            if (!split.isEmpty() && "end".equals(RuleYamlSupport.string(split.get("type"), ""))) {
-                out.add(new SplitDirectionalRule(id + ":split_end", RuleYamlSupport.stringList(split.get("tokens"))));
-            }
+            loadDeleteRules(id, rewrite, out);
+            loadBeforeAfterRules(id, rewrite, spec, out);
+            loadInsertRules(id, rewrite, spec, out);
+            loadMergeRules(id, merge, out);
+            loadRegexRules(id, rewrite, spec, out);
+            loadSplitRules(id, rewrite, out);
         }
+
         return out;
     }
 
+    private static void loadDeleteRules(String id, Map<String, Object> rewrite, List<CorrectionRule> out) {
+        Map<String, Object> delete = RuleYamlSupport.map(RuleYamlSupport.map(rewrite.get("delete")));
+        if (delete.isEmpty()) {
+            return;
+        }
+
+        String type = RuleYamlSupport.string(delete.get("type"), "");
+        List<String> chars = RuleYamlSupport.stringList(delete.get("chars"));
+        if ("chars".equals(type)) {
+            out.add(new DeleteCharsRule(id + ":delete_chars", chars));
+        } else if ("part".equals(type)) {
+            out.add(new DeletePartsRule(id + ":delete_parts", chars));
+        }
+    }
+
+    private static void loadBeforeAfterRules(String id, Map<String, Object> rewrite, MatchSpec spec, List<CorrectionRule> out) {
+        List<String> before = RuleYamlSupport.stringList(rewrite.get("before"));
+        List<String> after = RuleYamlSupport.stringList(rewrite.get("after"));
+        Map<String, Object> gloss = RuleYamlSupport.map(rewrite.get("gloss"));
+
+        List<String> glossBefore = RuleYamlSupport.stringList(gloss.get("before"));
+        List<String> glossAfter = RuleYamlSupport.stringList(gloss.get("after"));
+
+        Map<String, String> surfaceMap = buildMapping(before, after);
+        Map<String, String> glossMap = buildMapping(glossBefore, glossAfter);
+
+        boolean hasSurfaceRewrite = !surfaceMap.isEmpty();
+        boolean hasGlossRewrite = !glossMap.isEmpty();
+
+        if (hasSurfaceRewrite && hasGlossRewrite) {
+            out.add(new SurfaceRewriteRule(id + ":surface_and_gloss", spec, surfaceMap, glossMap));
+            return;
+        }
+
+        if (hasSurfaceRewrite) {
+            out.add(new SurfaceRewriteRule(id + ":surface_only", spec, surfaceMap, Map.of()));
+        }
+
+        if (hasGlossRewrite) {
+            RuleSelector selector = selectorFromSpec(spec, true, glossBefore);
+            out.add(new GlossBeforeAfterRule(id + ":gloss_only", selector, glossMap, true));
+        }
+    }
+
+    private static void loadInsertRules(String id, Map<String, Object> rewrite, MatchSpec spec, List<CorrectionRule> out) {
+        Map<String, Object> ins = RuleYamlSupport.map(rewrite.get("insert"));
+        if (ins.isEmpty()) {
+            return;
+        }
+        out.add(new InsertSegmentRule(
+                id + ":insert",
+                spec,
+                RuleYamlSupport.string(ins.get("segment"), ""),
+                RuleYamlSupport.intValue(ins.get("token"), 1),
+                RuleYamlSupport.intValue(ins.get("position"), 1)
+        ));
+    }
+
+    private static void loadMergeRules(String id, Map<String, Object> merge, List<CorrectionRule> out) {
+        if (merge.isEmpty()) {
+            return;
+        }
+        Map<String, Object> match = RuleYamlSupport.map(merge.get("match"));
+        Object tokens = match.get("tokens");
+        List<List<String>> seqs = new ArrayList<>();
+        if (tokens instanceof List<?> l && !l.isEmpty() && l.get(0) instanceof List<?>) {
+            for (Object o : l) {
+                seqs.add(RuleYamlSupport.stringList(o));
+            }
+        } else if (tokens != null) {
+            seqs.add(RuleYamlSupport.stringList(tokens));
+        }
+        if (!seqs.isEmpty()) {
+            out.add(new MergeSequenceRule(id + ":merge", seqs));
+        }
+    }
+
+    private static void loadRegexRules(String id, Map<String, Object> rewrite, MatchSpec spec, List<CorrectionRule> out) {
+        Map<String, Object> regexSub = RuleYamlSupport.map(rewrite.get("regex_sub"));
+        if (regexSub.isEmpty()) {
+            return;
+        }
+
+        boolean ignoreCase = RuleYamlSupport.bool(regexSub.get("ignore_case"), false);
+        int flags = ignoreCase ? Pattern.CASE_INSENSITIVE | Pattern.UNICODE_CASE : 0;
+        Pattern pattern = Pattern.compile(RuleYamlSupport.string(regexSub.get("pattern"), ""), flags);
+        String scope = RuleYamlSupport.string(regexSub.get("scope"), "chuj");
+        String repl = RuleYamlSupport.string(regexSub.get("repl"), "");
+
+        RuleSelector selector = selectorFromSpec(spec, "gloss".equalsIgnoreCase(scope), List.of());
+
+        if ("gloss".equalsIgnoreCase(scope)) {
+            out.add(new GlossReplaceRule(id + ":regex_gloss", pattern.pattern(), repl, ignoreCase));
+        } else {
+            out.add(new RegexSubRule(id + ":regex_sub", selector, scope, pattern, repl));
+        }
+    }
+
+    private static void loadSplitRules(String id, Map<String, Object> rewrite, List<CorrectionRule> out) {
+        Map<String, Object> split = RuleYamlSupport.map(rewrite.get("split"));
+        if (!split.isEmpty() && "end".equals(RuleYamlSupport.string(split.get("type"), ""))) {
+            out.add(new SplitDirectionalRule(id + ":split_end", RuleYamlSupport.stringList(split.get("tokens"))));
+        }
+    }
+
+    private static RuleSelector selectorFromSpec(MatchSpec spec, boolean onGloss, List<String> beforeValues) {
+        Set<String> inList = new LinkedHashSet<>();
+        if (onGloss) {
+            inList.addAll(spec.glossValues());
+            inList.addAll(spec.glossStartsWith());
+        } else {
+            inList.addAll(spec.tokenIsWord());
+            inList.addAll(spec.tokenAny());
+            inList.addAll(spec.tokenStartsWith());
+            inList.addAll(spec.tokenEndsWith());
+            inList.addAll(spec.tokenHasSegment());
+        }
+        return new RuleSelector(onGloss, null, inList, beforeValues, true);
+    }
+
     private static Map<String, String> buildMapping(List<String> before, List<String> after) {
-        if (before.isEmpty() || after.isEmpty()) return Map.of();
+        if (before.isEmpty() || after.isEmpty()) {
+            return Map.of();
+        }
         Map<String, String> out = new HashMap<>();
         if (after.size() == 1) {
-            for (String b : before) out.put(norm(b), after.getFirst());
-        } else {
-            for (int i = 0; i < Math.min(before.size(), after.size()); i++) out.put(norm(before.get(i)), after.get(i));
+            String target = after.get(0);
+            for (String b : before) {
+                out.put(norm(b), target);
+            }
+            return out;
+        }
+        for (int i = 0; i < Math.min(before.size(), after.size()); i++) {
+            out.put(norm(before.get(i)), after.get(i));
         }
         return out;
     }
